# virtual-audio-driver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CreateDriver.cmake  ParseDriverConfig.cmake
config/: Info.plist.in  config.h.in  default_config.ini
resources/: MetaSonic.icns
src/: driver.cpp
src/mts/: common.h  dsp.h  util.h
src/mts/object/: box.h  device.h  mute_control.h  plugin.h  stream.h  volume_control.h
tools/: clean  gen_config  hal  install  property  reset  settings  symbol
